--- a/Core/App/templates/app/base.html
+++ b/Core/App/templates/app/base.html
@@ -10,7 +10,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">HR Management</a>
+        <a class="navbar-brand" href="#">Job Application Portal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
